--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">IphoneGesture</string>
+    <string name="startService_button">start Floating Bar service</string>
+    <string name="stopService_button">stop Floating Bar service</string>
+
 </resources>
